[package]
name = "rust_rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", features = ["std", "compile-time-rng"] }
mimalloc = "0.1.39"
rayon = "1.8.0"
serde =  { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
